--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   gap: ^3.0.1
   equatable: ^2.0.7
   flutter_riverpod: ^2.6.1
+  flex_color_scheme: ^8.2.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
